--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тестирование и отладка программного обеспечения</title>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
+<body class="animate__animated animate__fadeInDownBig">
+    <header class="animate__animated animate__fadeInDownBig">
         <div class="header-container">
             <div class="logo">
-                <img src="img/debugging-testing1.png" alt="logo" style="width: 70%;">
+                <img src="img/debugging-testing1.png" alt="logo" class="logo" style="width: 70%;">
             </div>
             <input type="checkbox" id="menu-checkbox" name="inputcheckmenu">
             <nav role="navigation">
                 <label for="menu-checkbox" class="toggle-button" data-open="Menu" data-close="Close" onclick></label>
                 <ul class="main-menu">
                     <li>
-                        <a href="teoric.html">Теоретическое обоснование</a></li>
+                        <a href="teoric.html" class="btn" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Теоретическое обоснование</a></li>
                     <li>
-                        <a href="practic.html">Практические задания</a></li>
+                        <a href="practic.html" class="btn" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Практические задания</a></li>
                     <li>
-                        <a href="tests.html">Тесты</a></li>
+                        <a href="tests.html" class="btn" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Тесты</a></li>
                     <li>
-                        <a href="#">About</a></li>
+                        <a href="#" class="btn" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="top-slide" id="top-block">
+        <section class="top-slide animate__animated animate__fadeInDownBig" id="top-block">
             <div class="top-container">
                 <div>
                     <h2>Учебный сайт</h2>
@@ -46,11 +47,11 @@
                     <p>Тестирование и отладка программного обеспечения</p>
                 </div>
                 <ul class="actions special" style="position: relative; top: 140px;">
-                    <li><a href="#specialize" class="button scrolly">Продолжить</a></li>
+                    <li><a href="#specialize" class="button scrolly btn" style="text-decoration: none;" onmouseover="this.className='button scrolly animate__animated animate__pulse'" onmouseout="this.className='button scrolly'">Продолжить</a></li>
                 </ul>
             </div>
         </section>
-        <section class="specialize" id="specialize">
+        <section class="specialize animate__animated animate__fadeInDownBig" id="specialize">
             <div class="specialize-container">
                 <h3>Выберите категорию</h3>
                 <p>пора приступить к обучению</p>
@@ -64,7 +65,7 @@
                         </div>
                         <p class="scd-p">Для поиска и изучения материала.</p>
                         <ul class="actions special">
-                            <li><a href="teoric.html" class="button">Перейти</a></li>
+                            <li><a href="teoric.html" class="button btn" style="text-decoration: none;">Перейти</a></li>
                         </ul>
                     </div>
                     <div class="card">
@@ -76,7 +77,7 @@
                         </div>
                         <p class="scd-p">Для закрепления изученного материала..</p>
                         <ul class="actions special">
-                            <li><a href="practic.html" class="button">Перейти</a></li>
+                            <li><a href="practic.html" class="button btn" style="text-decoration: none;">Перейти</a></li>
                         </ul>
                     </div>
                     <div class="card">
@@ -88,37 +89,37 @@
                         </div>
                         <p class="scd-p">Проверка знаний</p>
                         <ul class="actions special">
-                            <li><a href="tests.html" class="button">Перейти</a></li>
+                            <li><a href="tests.html" class="button btn" style="text-decoration: none;">Перейти</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="infotest" id="infotest">
-            <div class="infotest-container">
+        <section class="infotest animate__animated animate__fadeInDownBig" id="infotest">
+            <div class="infotest-container" id="inf">
                 <h3>What is testing</h3>
-                <p class="scd-p">Тестирование программного обеспечения (software testing)- это процесс анализа или эксплуатации программного обеспечения с целью выявления дефектов. </p> <br>
+                <p class="scd-p inf">Тестирование программного обеспечения (software testing)- это процесс анализа или эксплуатации программного обеспечения с целью выявления дефектов. </p> <br>
 
-                <p class="scd-p">Несмотря на всю простоту этого определения, в нем содержатся пункты, которые требуют дальнейших пояснений. Слово процесс (process) используется для того, чтобы подчеркнуть, что тестирование суть плановая, упорядоченная деятельность. Этот
+                <p class="scd-p inf">Несмотря на всю простоту этого определения, в нем содержатся пункты, которые требуют дальнейших пояснений. Слово процесс (process) используется для того, чтобы подчеркнуть, что тестирование суть плановая, упорядоченная деятельность. Этот
                     момент очень важен, если мы заинтересованы в быстрой разработке, ибо хорошо продуманный, систематический подход быстрее приводит к обнаружению программных ошибок, чем плохо спланированное тестирование, к тому же проводимое в спешке.
                 </p><br>
 
-                <p class="scd-p">Согласно этому определению, тестирование предусматривает "анализ" или "эксплуатацию" программного продукта. Тестовая деятельность, связанная с анализом результатов разработки программного обеспечения, называется статическим тестированием
+                <p class="scd-p inf">Согласно этому определению, тестирование предусматривает "анализ" или "эксплуатацию" программного продукта. Тестовая деятельность, связанная с анализом результатов разработки программного обеспечения, называется статическим тестированием
                     (static testing). Статическое тестирование предусматривает проверку программных кодов, сквозной контроль и проверку программы без запуска па машине, т.е. проверку за столом (desk checks). В отличие от этого, тестовая деятельность,
                     предусматривающая эксплуатацию программного продукта, носит название динамического тестирования (dynamic testing). Статическое и динамическое тестирование дополняют друг друга, и каждый из этих типов тестирования реализует собственный
                     подход к выявлению ошибок. </p><br>
 
-                <p class="scd-p">Последний пункт определения, требующий дополнительных пояснений - это понятие дефекта (bug). Говоря простыми словами, программная ошибка - не что иное, как изъян в разработке программного продукта, который вызывает несоответствие ожидаемых
+                <p class="scd-p inf">Последний пункт определения, требующий дополнительных пояснений - это понятие дефекта (bug). Говоря простыми словами, программная ошибка - не что иное, как изъян в разработке программного продукта, который вызывает несоответствие ожидаемых
                     результатов выполнения программного продукта и фактически полученных результатов. Дефект может возникнуть на стадии кодирования, на стадии формулирования требований или на стадии проектирования, либо же его причина может крыться в
                     некорректной конфигурации или данных. Дефектом может быть также что-то другое, что не соответствует ожиданиям заказчика и что может быть, а может и не быть определено в спецификации программного продукта. Более подробное описание терминологии
                     дефектов приводится во врезке. </p><br>
 
-                <p class="scd-p">Отладка - это процесс выявления источников отказов, т.е. ошибок, и внесение в программу соответствующих исправлений.</p>
+                <p class="scd-p inf">Отладка - это процесс выявления источников отказов, т.е. ошибок, и внесение в программу соответствующих исправлений.</p>
             </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="animate__animated animate__fadeInDownBig">
         <div class="container">
             <div class="row">
 
@@ -162,7 +163,9 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h3>sample text</h3>
+                    <a href="https://jhonnystyrke.github.io/diplom-repo/index.html" style="text-decoration: none;">
+                        <h3>Макет без PHP</h3>
+                    </a>
 
                 </div>
 
@@ -176,17 +179,7 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script>
-        (function($) {
-            $(window).load(function() {
 
-                $("body").mCustomScrollbar({
-                    theme: "minimal-dark"
-                });
-
-            });
-        })(jQuery);
-    </script>
     <script src="script.js"></script>
 </body>
 
