--- a/practic.html
+++ b/practic.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
+<body class="animate__animated animate__fadeInDownBig">
+    <header class="animate__animated animate__fadeInDownBig">
         <div class="header-container">
             <div class="logo">
                 <img src="img/debugging-testing1.png" alt="logo" style="width: 70%;">
@@ -22,47 +23,71 @@
                 <label for="menu-checkbox" class="toggle-button" data-open="Menu" data-close="Close" onclick></label>
                 <ul class="main-menu">
                     <li>
-                        <a href="index.html">Главная</a></li>
+                        <a href="index.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Главная</a></li>
                     <li>
-                        <a href="teoric.html">Теоретическое обоснование</a></li>
+                        <a href="teoric.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Теоретическое обоснование</a></li>
                     <li>
-                        <a href="tests.html">Тесты</a></li>
+                        <a href="tests.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Тесты</a></li>
                     <li>
-                        <a href="#">About</a></li>
+                        <a href="#" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="practic" id="practic">
+        <section id="practic" class="practic animate__animated animate__fadeInDownBig">
             <div class="parent-container">
                 <div class="parent">
-                    <h2>Task 1</h2>
+                    <h2>Задание №1</h2>
                     <div class="child">
-                        text of task..
+                        <p>
+                            Необходимо написать программу для выполнения расчета суммы получаемой студентом стипендии по результатам сдачи сессии. При сдаче сессии хотя бы с одной оценкой «удовлетворительно» либо сдаче сессии после установленного срока, студент стипендии не получает.
+                            При сдаче сессии вовремя и без оценок «удовлетворительно», студент получает стипендию, причем она рассчитывается индивидуально следующим образом: <br> 1) при сдаче сессии только на оценки «хорошо»,
+                            стипендия равна рублей; <br> 2) при сдаче сессии на оценки «хорошо» и «отлично», к сумме рублей начисляется надбавка 25 %; <br> 3) при сдаче сессии только на оценки «отлично», к сумме рублей начисляется надбавка 50 %. <br>                            Исходные данные, вводимые пользователем: <br> 1) оценка по каждой дисциплине из списка возможных дисциплин, а также указание того, вовремя или не вовремя сдана дисциплина; <br> 2) значение А.
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Task 2</h2>
+                    <h2>Задание №2</h2>
                     <div class="child">
-                        text of task..
+                        <p>
+                            Необходимо написать программу для выполнения расчета требуемого количества операторов call-центра в зависимости от ожидаемого количества звонков. Для случая, когда среднее время разговора оператора с клиентом меньше или равно 5 минут: <br>                            1) если меньше или равно 10 звонков в час, то достаточно операторов; <br> 2) если больше 10 и меньше 30 звонков в час, то достаточно операторов; <br> 3) если больше или равно 30 звонков в час, то достаточно операторов. <br>                            Для случая, когда среднее время разговора оператора с клиентом больше 5 минут, полученное значение увеличивается на 20 %. <br> Исходные данные, вводимые пользователем: <br> 1) минимальное количество операторов; <br> 2) количество
+                            звонков в час; <br> 3) среднее время разговора оператора с клиентом.
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Task 3</h2>
+                    <h2>Задание №3</h2>
                     <div class="child">
-                        text of task..
+                        <p>
+                            Выполните тестирование методом черного ящика для данного кода: <br> using System; <br> using System.Collections.Generic; <br> using System.Linq; using System.Text; <br> using System.Threading.Tasks; <br> namespace MathTaskClassLibrary
+                            { <br> public class Geometry { <br> public int RectangleArea(int<br> a, int b) <br> { return a * b; <br> } <br> }
+                            <br> }
+                            <br>
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Task 4</h2>
+                    <h2>Задание №4</h2>
                     <div class="child">
-                        text of task..
+                        <p>
+                            Даны целые числа: <strong> А1..А20, В1..В20. </strong> Преобразовать последовательность <strong>  В1..В20 </strong> по правилу: если <strong> а(i)&lt;=0 </strong>, то <strong> b(i) </strong> увеличить в <strong> 10 </strong>                            раз, иначе <strong> b(i) </strong> заменить <strong> 0 (i=1..20) </<strong>.
+                        </p>
                     </div>
                 </div>
+                <div class="parent">
+                    <h2>Задание №5</h2>
+                    <div class="child">
+                        <p>
+                            Даны действительные числа <strong> А1..А20. </strong> Преобразовать эту последовательность по правилу: большее из <strong> а(i) </strong> и <strong> а(10+i) (i=1..10) </strong> принять в качестве нового значения<strong> а(i) </strong>,
+                            а меньшее в качестве нового значения <strong> а(10+i). </strong> <br> Составить трассировочную таблицу. Описать процесс отладки.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
+    <footer class="animate__animated animate__fadeInDownBig">
         <div class="container">
             <div class="row">
 
@@ -106,7 +131,9 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h3>sample text</h3>
+                    <a href="https://jhonnystyrke.github.io/diplom-repo/index.html" style="text-decoration: none;">
+                        <h3>Макет без PHP</h3>
+                    </a>
 
                 </div>
 
@@ -120,8 +147,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
