--- a/teoric.html
+++ b/teoric.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
+<body class="animate__animated animate__fadeInDownBig">
+    <header class="animate__animated animate__fadeInDownBig">
         <div class="header-container">
             <div class="logo">
                 <img src="img/debugging-testing1.png" alt="logo" style="width: 70%;">
@@ -22,47 +23,121 @@
                 <label for="menu-checkbox" class="toggle-button" data-open="Menu" data-close="Close" onclick></label>
                 <ul class="main-menu">
                     <li>
-                        <a href="index.html">Главная</a></li>
+                        <a href="index.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Главная</a></li>
                     <li>
-                        <a href="practic.html">Практические задания</a></li>
+                        <a href="practic.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Практические задания</a></li>
                     <li>
-                        <a href="tests.html">Тесты</a></li>
+                        <a href="tests.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Тесты</a></li>
                     <li>
-                        <a href="#">About</a></li>
+                        <a href="#" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="teoric" id="teoric">
+
+        <section id="teoric" class="teoric animate__animated animate__fadeInDownBig">
             <div class="parent-container">
                 <div class="parent">
-                    <h2>Theme 1</h2>
+                    <h2>Тема 1. Типы тестов</h2>
                     <div class="child">
-                        something text about testing..
+                        <p>
+                            <strong>Модульные тесты</strong> Модульные тесты считаются низкоуровневыми, близкими к исходному коду вашего приложения. Они нацелены на тестирование отдельных методов и функций внутри классов, тестирование компонентов и модулей,
+                            используемых вашей программой. Модульные тесты в целом не требуют особых затрат на автоматизацию и могут отрабатывать крайне быстро, если задействовать сервер непрерывной интеграции (continuous integration server). <br>
+                        </p>
+                        <p>
+                            <strong>Интеграционные тесты</strong> Интеграционные тесты проверяют хорошо ли работают вместе сервисы и модули, используемые вашим приложением. Например, они могут тестировать интеграцию с базой данных или удостоверяться,
+                            что микросервисы правильно взаимодействуют друг с другом. Эти тесты запускаются с бОльшими затратами, поскольку им необходимо, чтобы много частей приложения работало одновременно. <br>
+                        </p>
+                        <p>
+                            <strong>Функциональные тесты</strong> Функциональные тесты основываются на требованиях бизнеса к приложению. Они лишь проверяют выходные данные после произведенного действия и не проверяют промежуточные состояния системы во
+                            время воспроизведения действия. Иногда между интеграционными тестами и функциональными тестами возникают противоречия, т.к. они оба запрашивают множество компонентов, взаимодействующих друг с другом. Разница состоит в том,
+                            что интеграционные тесты могут просто удостовериться, что доступ к базе данных имеется, тогда как функциональный тест захочет получить из базы данных определенное значение, чтобы проверить одно из требований к конечному продукту.
+                            <br>
+                        </p>
+                        <p>
+                            <strong>Сквозные тесты (End-to-end tests)</strong> Сквозное тестирование имитирует поведение пользователя при взаимодействии с программным обеспечением. Он проверяет насколько точно различные пользователи следуют предполагаемому
+                            сценарию работы приложения и могут быть достаточно простыми, допустим, выглядеть как загрузка веб-страницы или вход на сайт или в более сложном случае – подтверждение e-mail адреса, онлайн платежи и т.д. Сквозные тесты крайне
+                            полезные, но производить их затратно, а еще их может быть сложно автоматизировать. Рекомендуется проводить несколько сквозных тестов, но все же полагаться больше на низкоуровневое тестирование (модульные и интеграционные тесты),
+                            чтобы иметь возможность быстро распознать серьезные изменения.
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Theme 2</h2>
+                    <h2>Тема 2. Ручное или автоматизированное тестирование?</h2>
                     <div class="child">
-                        something text about testing..
+                        <p>
+                            Сначала надо понять различия между ручными и автоматизированными тестами. Ручное тестирование проводится непосредственно человеком, который нажимает на кнопочки в приложении или взаимодействует с программным обеспечением или API с необходимым инструментарием.
+                            Это достаточно затратно, так как это требует от тестировщика установки среды разработки и выполнения тестов вручную. Имеет место вероятность ошибки за счет человеческого фактора, например опечатки или пропуска шагов в тестовом
+                            сценарии. Автоматизированные тесты, с другой стороны, производятся машиной, которая запускает тестовый сценарий, который был написан заранее. Такие тесты могут сильно варьироваться в зависимости от сложности, начиная от проверки
+                            одного единственного метода в классе до отработки последовательности сложных действий в UI, чтобы убедиться в правильности работы. Такой способ считается более надежным, однако его работоспособность все еще зависит от того
+                            насколько скрипт для тестирования был хорошо написан. Автоматизированные тесты – это ключевой компонент непрерывной интеграции (Continuous Integration) и непрерывной доставки (continuous delivery), а также хороший способ масштабировать
+                            ваш QA процесс во время добавления нового функционала для вашего приложения. Однако в ручном тестировании все равно есть своя ценность. Поэтому в статье мы обязательно поговорим об исследовательском тестировании (exploratory
+                            testing).
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Theme 3</h2>
+                    <h2>Тема 3. Тестирование черного ящика</h2>
                     <div class="child">
-                        something text about testing..
+                        <p>
+                            Техника тестирования, не имеющая каких-либо знаний о внутренней работе приложения, называется «черным ящиком». Тестер не обращает внимания на архитектуру системы и не имеет доступа к исходному коду. Как правило, при выполнении теста черного ящика тестер
+                            взаимодействует с пользовательским интерфейсом системы, предоставляя входные данные и анализируя выходные данные, не зная, как и где обрабатываются входные данные. <br>
+                        </p>
+                        <p>
+                            <strong>Преимущества:</strong> <br>1.Хорошо подходит и эффективен для больших сегментов кода. <br>2.Код доступа не требуется. <br>3.Четко отделяет точку зрения пользователя от точки зрения разработчика через четко определенные
+                            роли. <br>4.Большое количество тестировщиков средней квалификации могут тестировать приложение без знания реализации, языка программирования или операционных систем. <br>
+                        </p>
+                        <p>
+                            <strong>Недостатки:</strong> <br>1.Ограниченный охват, поскольку фактически выполняется только выбранное количество тестовых сценариев. <br>2.Неэффективное тестирование из-за того, что тестер имеет только ограниченные знания
+                            о приложении.
+                            <br>3.Слепое покрытие, поскольку тестер не может ориентироваться на определенные сегменты кода или области, подверженные ошибкам. <br>4.Тестовые случаи сложно спроектировать.
+                        </p>
                     </div>
                 </div>
                 <div class="parent">
-                    <h2>Theme 4</h2>
+                    <h2>Тема 4. Тестирование белого ящика</h2>
                     <div class="child">
-                        something text about testing..
+                        <p>
+                            Тестирование белого ящика – это детальное исследование внутренней логики и структуры кода. Тестирование белого ящика также называется тестированием стекла или тестированием открытого ящика . Чтобы выполнить тестирование « белого ящика» приложения, тестировщик
+                            должен знать внутреннюю работу кода. Тестировщик должен заглянуть в исходный код и выяснить, какой блок / блок кода ведет себя неадекватно. <br>
+                        </p>
+                        <p>
+                            <strong>Преимущества:</strong> <br>1.Поскольку тестировщик знает исходный код, становится очень легко определить, какой тип данных может помочь в эффективном тестировании приложения. <br>2.Это помогает в оптимизации кода. <br>3.Дополнительные
+                            строки кода могут быть удалены, что может привести к скрытым дефектам. <br>4.Благодаря знаниям тестера о коде максимальный охват достигается при написании тестового сценария. <br>
+                        </p>
+                        <p>
+                            <strong>Недостатки:</strong> <br>1.В связи с тем, что для тестирования белого ящика требуется опытный тестировщик, затраты увеличиваются. <br>2.Иногда невозможно заглянуть в каждый уголок и найти скрытые ошибки, которые могут
+                            создать проблемы, так как многие пути не пройдут проверку. <br>3.Сложно проводить тестирование белого ящика, так как для этого требуются специализированные инструменты, такие как анализаторы кода и средства отладки.
+                        </p>
                     </div>
                 </div>
+                <div class="parent">
+                    <h2>Тема 5. Динамический и статический анализ кода</h2>
+                    <div class="child">
+                        <p>
+                            По мере продвижения проекта стоимость устранения дефектов ПО может экспоненциально возрастать. Инструменты статического и динамического анализа помогают предотвратить эти затраты благодаря обнаружению программных ошибок на ранних этапах жизненного цикла
+                            ПО.
+                        </p>
+                        <p>
+                            <strong>Динамический анализ кода (runtime analysis)</strong> - способ анализа программы непосредственно при ее выполнении. При динамическом анализе проблемы в исходном коде находятся по мере их возникновения. Процесс анализа
+                            можно разбить на несколько этапов - подготовка исходных данных, проведение тестового запуска программы, сбор необходимых параметров и анализ полученных данных.
+                        </p>
+                        <p>
+                            <strong>Статический анализ кода (static analysis)</strong> - анализ программы, производимый без реального выполнения исследуемых программ. Статический анализ кода позволяет обнаружить дефекты в исходном коде до того, как код
+                            будет готов для запуска. На практике разработчики могут использовать как статический, так и динамический анализ для ускорения процессов разработки и тестирования, а также для повышения качества исходного продукта.
+                        </p>
+                    </div>
+                </div>
+                <div class="parent">
+                    <h2>Тема 6. Модульное тестирование</h2>
+                    <div class="child"></div>
+                </div>
+            </div>
         </section>
+
     </main>
-    <footer>
+    <footer class="animate__animated animate__fadeInDownBig">
         <div class="container">
             <div class="row">
 
@@ -94,7 +169,7 @@
                     </div>
 
                     <div class="media">
-                        <a href="test.html" class="pull-left">
+                        <a href="tests.html" class="pull-left">
                             <img src="img/testimg.jpg" alt="" class="media-object" style="width: 64px;" />
                         </a>
                         <div class="media-body">
@@ -106,7 +181,9 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h3>sample text</h3>
+                    <a href="https://jhonnystyrke.github.io/diplom-repo/index.html" style="text-decoration: none;">
+                        <h3>Макет без PHP</h3>
+                    </a>
 
                 </div>
 
@@ -120,8 +197,8 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
