--- a/tests.html
+++ b/tests.html
@@ -8,11 +8,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <header>
+<body class="animate__animated animate__fadeInDownBig">
+    <header class="animate__animated animate__fadeInDownBig">
         <div class="header-container">
             <div class="logo">
                 <img src="img/debugging-testing1.png" alt="logo" style="width: 70%;">
@@ -22,101 +23,31 @@
                 <label for="menu-checkbox" class="toggle-button" data-open="Menu" data-close="Close" onclick></label>
                 <ul class="main-menu">
                     <li>
-                        <a href="index.html">Главная</a></li>
+                        <a href="index.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Главная</a></li>
                     <li>
-                        <a href="teoric.html">Теоретическое обоснование</a></li>
+                        <a href="teoric.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Теоретическое обоснование</a></li>
                     <li>
-                        <a href="practic.html">Практические задания</a></li>
+                        <a href="practic.html" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">Практические задания</a></li>
                     <li>
-                        <a href="#">About</a></li>
+                        <a href="#" style="text-decoration: none;" onmouseover="this.className='animate__animated animate__pulse'" onmouseout="this.className=' '">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section class="tests" id="tests">
+
+        <section class="tests animate__animated animate__fadeInDownBig" id="tests">
             <div class="parent-container">
-                <div class="parent">
-                    <h2>Test 1</h2>
-                    <div class="child">
+                <div id="quiz-container">
+                    <h1>Проверь свои знания</h1>
+                    <button id="startGame">Начать</button>
 
-
-                        <form name="quiz" action="javascript:check();" class="quizform">
-                            <div class="quizsection">
-                                <h1>Вопрос #1</h1>
-                                <div class="answer">
-                                    <input name="q1" value="value2" id="value1" type="radio" checked="checked" /> Value 1
-                                </div>
-                                <div class="answer">
-                                    <input name="q1" value="value1" id="value2" type="radio" /> Value 2
-                                </div>
-                                <div class="answer">
-                                    <input name="q1" value="value1" id="value3" type="radio" /> Value 3
-                                </div>
-                                <div class="answer">
-                                    <input name="q1" value="value1" id="value4" type="radio" /> Value 4
-                                </div>
-                            </div>
-
-                            <div class="quizsection">
-                                <h1>Вопрос #2</h1>
-                                <div class="answer">
-                                    <input name="q2" value="value1" id="value1" type="radio" checked="checked" /> Value 1
-                                </div>
-                                <div class="answer">
-                                    <input name="q2" value="value2" id="value2" type="radio" /> Value 2
-                                </div>
-                                <div class="answer">
-                                    <input name="q2" value="value1" id="value3" type="radio" /> Value 3
-                                </div>
-                                <div class="answer">
-                                    <input name="q2" value="value1" id="value4" type="radio" /> Value 4
-                                </div>
-                            </div>
-
-                            <div class="quizsection">
-                                <h1>Вопрос #3</h1>
-                                <div class="answer">
-                                    <input name="q3" value="value1" id="value1" type="radio" checked="checked" /> Value 1
-                                </div>
-                                <div class="answer">
-                                    <input name="q3" value="value1" id="value2" type="radio" /> Value 2
-                                </div>
-                                <div class="answer">
-                                    <input name="q3" value="value2" id="value3" type="radio" /> Value 3
-                                </div>
-                                <div class="answer">
-                                    <input name="q3" value="value1" id="value4" type="radio" /> Value 4
-                                </div>
-                            </div>
-                            <input value="Submit" type="submit" /> <input value="Reset" type="reset" />
-                        </form>
-
-
-                    </div>
                 </div>
-                <div class="parent">
-                    <h2>Test 2</h2>
-                    <div class="child">
-                        testtesttesttesttetstets
-                    </div>
-                </div>
-
-                <div class="parent">
-                    <h2>Test 3</h2>
-                    <div class="child">
-                        testtesttesttesttetstets
-                    </div>
-                </div>
-                <div class="parent">
-                    <h2>Test 4</h2>
-                    <div class="child">
-                        testtesttesttesttetstets
-                    </div>
-                </div>
+            </div>
         </section>
+
     </main>
-    <footer>
+    <footer class="animate__animated animate__fadeInDownBig">
         <div class="container">
             <div class="row">
 
@@ -160,7 +91,9 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <h3>sample text</h3>
+                    <a href="https://jhonnystyrke.github.io/diplom-repo/index.html" style="text-decoration: none;">
+                        <h3>Макет без PHP</h3>
+                    </a>
 
                 </div>
 
@@ -174,8 +107,33 @@
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/quiz.js"></script>
+    <!-- Initialize Quiz -->
+    <script src="js/datatest.js"></script>
+    <script>
+        window.onload = () => {
+            const startBtn = document.getElementById('startGame');
+            startBtn.onclick = () =>
+                new Quiz(
+                    QuestionsDB, {
+                        // container: 'quiz-container', // Default container id='quiz-container'
+                        // length: 10, // Default is 10 if Data.length > 10 else Data.length
+                        shuffle: true, // Shuffle is disabled default
+                        tryAgain: false // Try again button is enabled default
+                    }, {
+                        nextBtn: 'Дальше',
+                        endBtn: 'Завершить'
+                    }
+                );
+        };
+        let deferredPrompt;
+        window.addEventListener('beforeinstallprompt', e => {
+            // Stash the event so it can be triggered later.
+            deferredPrompt = e;
+            showInstallPromotion();
+        });
+    </script>
     <script src="script.js"></script>
-
 </body>
 
 </html>
